tecla de incremento automático global

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
